--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     <h2 class="section-title">Free Predictions</h2>
     <table>
         <tr><th>Match</th><th>Prediction</th></tr>
-        <tr><td>Team A vs Team B</td><td>Over 2.5 Goals</td></tr>
-        <tr><td>Team C vs Team D</td><td>Home Win</td></tr>
-        <tr><td>Team E vs Team F</td><td>Both Teams to Score</td></tr>
-        <tr><td>Team G vs Team H</td><td>Draw</td></tr>
-        <tr><td>Team I vs Team J</td><td>Away Win</td></tr>
+        <tr><td>SOUTH AFRICA vs NIGER</td><td>HOME WIN</td></tr>
+        <tr><td>RENNES vs MARSEILLE</td><td>AWAY Win</td></tr>
+        <tr><td>LEUVEN vs GENK</td><td>2X</td></tr>
+        <tr><td>MLADOST vs CRVENA ZVEVDA</td><td>OVER 2.5</td></tr>
+        <tr><td></td><td></td></tr>
     </table>
 
     <!-- LOGIN -->
@@ -227,3 +227,4 @@
 
 </body>
 </html>
+
