--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
         .section-title {
             font-size: 1.5rem;
-            color: #ff0;
+            color: rgb(3, 3, 3);
             margin-top: 40px;
         }
         .main-content {
@@ -126,7 +126,7 @@
             <tr><td>BTTS</td><td>VIP Match 6</td><td>Yes</td></tr>
         </table>
 
-        <h2 class="section-title">⚡ High Confidence Picks ⚡</h2>
+        <h2 class="section-title">⚡ straight win ⚡</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><td>Over 2.5</td><td>VIP Match 7</td><td>Yes</td></tr>
@@ -137,7 +137,7 @@
             <tr><td>BTTS</td><td>VIP Match 12</td><td>No</td></tr>
         </table>
 
-        <h2 class="section-title">💎 Premium Specials 💎</h2>
+        <h2 class="section-title">💎 corners 💎</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><td>Over 2.5</td><td>VIP Match 13</td><td>Yes</td></tr>
@@ -148,7 +148,7 @@
             <tr><td>BTTS</td><td>VIP Match 18</td><td>Yes</td></tr>
         </table>
 
-        <h2 class="section-title">🏆 Ultimate Locks 🏆</h2>
+        <h2 class="section-title">🏆 over 2.5 🏆</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><td>Over 2.5</td><td>VIP Match 19</td><td>Yes</td></tr>
@@ -159,6 +159,17 @@
             <tr><td>BTTS</td><td>VIP Match 24</td><td>No</td></tr>
         </table>
 
+        <h2 class="section-title">⚡ double chance ⚡</h2>
+        <table>
+            <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
+            <tr><td>Over 2.5</td><td>VIP Match 7</td><td>Yes</td></tr>
+            <tr><td>Corner</td><td>VIP Match 8</td><td>Under 9</td></tr>
+            <tr><td>Straight Win</td><td>VIP Match 9</td><td>Away Win</td></tr>
+            <tr><td>Top Prediction</td><td>VIP Match 10</td><td>Home Win</td></tr>
+            <tr><td>Double Chance</td><td>VIP Match 11</td><td>X2</td></tr>
+            <tr><td>BTTS</td><td>VIP Match 12</td><td>No</td></tr>
+        </table>
+        
     </div>
 
     <script>
@@ -227,4 +238,5 @@
 
 </body>
 </html>
+
 
