--- a/index.html
+++ b/index.html
@@ -118,56 +118,46 @@
         <h2 class="section-title">🔥 VIP Predictions 🔥</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>VIP Match 1</td><td>Yes</td></tr>
-            <tr><td>Corner</td><td>VIP Match 2</td><td>Over 10</td></tr>
-            <tr><td>Straight Win</td><td>VIP Match 3</td><td>Home Win</td></tr>
-            <tr><td>Top Prediction</td><td>VIP Match 4</td><td>Away Win</td></tr>
-            <tr><td>Double Chance</td><td>VIP Match 5</td><td>1X</td></tr>
-            <tr><td>BTTS</td><td>VIP Match 6</td><td>Yes</td></tr>
+            <tr><td>STRAIGHT WIN</td><td>SHANHAI PORT VS HENAN SONGSHAN</td><td>HOME WIN</td></tr>
+            <tr><td>Corner</td><td>STROMSGODSET VS BODO/GLIMT</td><td>Over 8.5</td></tr>
+            <tr><td>Straight Win</td><td>GALATASARAY VS KARAGUMRUK</td><td>Home Win</td></tr>
+            <tr><td>STRAIGHT WIN</td><td>LIVERPOOL VS BOURNEMOUTH</td><td>HOME Win</td></tr>
+            <tr><td>STRAIGHT WIN</td><td>VILLERREAL VS OVIEDO</td><td>HOME WIN</td></tr>
         </table>
 
         <h2 class="section-title">⚡ straight win ⚡</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>VIP Match 7</td><td>Yes</td></tr>
-            <tr><td>Corner</td><td>VIP Match 8</td><td>Under 9</td></tr>
-            <tr><td>Straight Win</td><td>VIP Match 9</td><td>Away Win</td></tr>
-            <tr><td>Top Prediction</td><td>VIP Match 10</td><td>Home Win</td></tr>
-            <tr><td>Double Chance</td><td>VIP Match 11</td><td>X2</td></tr>
-            <tr><td>BTTS</td><td>VIP Match 12</td><td>No</td></tr>
+            <tr><th>STRAIGHT WIN</th><th>SHANHAI PORT VS HENAN SONGSHAN</th><th>HOME WIN</th></tr>
+            <tr><td>STRAIGHT WIN</td><td>STROMSGODSET VS BODO/GLIMT</td><td>AWAY WIN</td></tr>
+            <tr><td>STRAIGHT WIN</td><td>GALATASARAY VS KARAGUMRUK</td><td>HOME WIN</td></tr>
+            <tr><td>Straight Win</td><td>LIVERPOOL VS BOURNEMOUTH</td><td>HOME Win</td></tr>
+            <tr><td>Straight Win</td><td>VILLERREAL VS OVIEDO</td><td>HOME WIN</td></tr>
         </table>
 
         <h2 class="section-title">💎 corners 💎</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>VIP Match 13</td><td>Yes</td></tr>
-            <tr><td>Corner</td><td>VIP Match 14</td><td>Over 11</td></tr>
-            <tr><td>Straight Win</td><td>VIP Match 15</td><td>Home Win</td></tr>
-            <tr><td>Top Prediction</td><td>VIP Match 16</td><td>Draw</td></tr>
-            <tr><td>Double Chance</td><td>VIP Match 17</td><td>1X</td></tr>
-            <tr><td>BTTS</td><td>VIP Match 18</td><td>Yes</td></tr>
+            <tr><th>CORNER</th><th>STROMSGODSET VS BODO/GLIMT</th><th>OVER 8.5</th></tr>
+            <tr><td>CORNER</td><td>LIVERPOOL VS BOURNEMOUTH</td><td>OVER 8.5</td></tr>
         </table>
 
         <h2 class="section-title">🏆 over 2.5 🏆</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>VIP Match 19</td><td>Yes</td></tr>
-            <tr><td>Corner</td><td>VIP Match 20</td><td>Under 8</td></tr>
-            <tr><td>Straight Win</td><td>VIP Match 21</td><td>Away Win</td></tr>
-            <tr><td>Top Prediction</td><td>VIP Match 22</td><td>Home Win</td></tr>
-            <tr><td>Double Chance</td><td>VIP Match 23</td><td>2X</td></tr>
-            <tr><td>BTTS</td><td>VIP Match 24</td><td>No</td></tr>
+            <tr><td>Over 2.5</td><td>SHANHAI PORT VS HENAN SONGSHAN</td><td>Yes</td></tr>
+            <tr><td>over 2.5 </td><td>LEUVEN VS GENK</td><td>YES</td></tr>
+            <tr><td>over 2.5 </td><td>GALATASARAY VS KARAGUMRUK</td><td>YES</td></tr>
+            <tr><td>over 2.5 </td><td>LIVERPOOL VS BOURNEMOUTH</td><td>YES</td></tr>
         </table>
 
         <h2 class="section-title">⚡ double chance ⚡</h2>
         <table>
-            <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>VIP Match 7</td><td>Yes</td></tr>
-            <tr><td>Corner</td><td>VIP Match 8</td><td>Under 9</td></tr>
-            <tr><td>Straight Win</td><td>VIP Match 9</td><td>Away Win</td></tr>
-            <tr><td>Top Prediction</td><td>VIP Match 10</td><td>Home Win</td></tr>
-            <tr><td>Double Chance</td><td>VIP Match 11</td><td>X2</td></tr>
-            <tr><td>BTTS</td><td>VIP Match 12</td><td>No</td></tr>
+            <tr><th>Category</th>MATCH<th></th><th>Prediction</th></tr>
+            <tr><td>Over 2.5</td><td>LEUVEN VS GENK</td><td>2X</td></tr>
+            <tr><td>Corner</td><td>NORDSJAELLAND VS FC COPENHAGEN</td><td>2X</td></tr>
+            <tr><td>Straight Win</td><td>NIGER VS SOUTH AFRICA</td><td>2X</td></tr>
+            <tr><td>Top Prediction</td><td>RENNES VS MARSEILLE</td><td>2X</td></tr>
         </table>
         
     </div>
@@ -238,5 +228,6 @@
 
 </body>
 </html>
+
 
 
