--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
         <tr><td>RENNES vs MARSEILLE</td><td>AWAY Win</td></tr>
         <tr><td>LEUVEN vs GENK</td><td>2X</td></tr>
         <tr><td>MLADOST vs CRVENA ZVEVDA</td><td>OVER 2.5</td></tr>
-        <tr><td></td><td></td></tr>
     </table>
 
     <!-- LOGIN -->
@@ -153,7 +152,7 @@
 
         <h2 class="section-title">⚡ double chance ⚡</h2>
         <table>
-            <tr><th>Category</th>MATCH<th></th><th>Prediction</th></tr>
+            <tr><th>Category</th><th>MATCH</th><th>Prediction</th></tr>
             <tr><td>Over 2.5</td><td>LEUVEN VS GENK</td><td>2X</td></tr>
             <tr><td>Corner</td><td>NORDSJAELLAND VS FC COPENHAGEN</td><td>2X</td></tr>
             <tr><td>Straight Win</td><td>NIGER VS SOUTH AFRICA</td><td>2X</td></tr>
@@ -228,6 +227,7 @@
 
 </body>
 </html>
+
 
 
 
