--- a/index.html
+++ b/index.html
@@ -138,14 +138,12 @@
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><th>CORNER</th><th>STROMSGODSET VS BODO/GLIMT</th><th>OVER 8.5</th></tr>
-            <tr><td>CORNER</td><td>LIVERPOOL VS BOURNEMOUTH</td><td>OVER 8.5</td></tr>
         </table>
 
         <h2 class="section-title">🏆 over 2.5 🏆</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><td>Over 2.5</td><td>SHANHAI PORT VS HENAN SONGSHAN</td><td>Yes</td></tr>
-            <tr><td>over 2.5 </td><td>LEUVEN VS GENK</td><td>YES</td></tr>
             <tr><td>over 2.5 </td><td>GALATASARAY VS KARAGUMRUK</td><td>YES</td></tr>
             <tr><td>over 2.5 </td><td>LIVERPOOL VS BOURNEMOUTH</td><td>YES</td></tr>
         </table>
@@ -153,10 +151,8 @@
         <h2 class="section-title">⚡ double chance ⚡</h2>
         <table>
             <tr><th>Category</th><th>MATCH</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>LEUVEN VS GENK</td><td>2X</td></tr>
-            <tr><td>Corner</td><td>NORDSJAELLAND VS FC COPENHAGEN</td><td>2X</td></tr>
-            <tr><td>Straight Win</td><td>NIGER VS SOUTH AFRICA</td><td>2X</td></tr>
-            <tr><td>Top Prediction</td><td>RENNES VS MARSEILLE</td><td>2X</td></tr>
+            <tr><td>DOUBLE CHANCE</td><td>NIGER VS SOUTH AFRICA</td><td>2X</td></tr>
+            <tr><td>DOUBLE CHANCE</td><td>RENNES VS MARSEILLE</td><td>2X</td></tr>
         </table>
         
     </div>
@@ -227,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
