--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <tr><td>SOUTH AFRICA vs NIGER</td><td>HOME WIN</td></tr>
         <tr><td>RENNES vs MARSEILLE</td><td>AWAY Win</td></tr>
         <tr><td>LEUVEN vs GENK</td><td>2X</td></tr>
-        <tr><td>MLADOST vs CRVENA ZVEVDA</td><td>OVER 2.5</td></tr>
+        <tr><td>STROMSGODSET VS BODO/GLIMT</td><td>OVER 8.5</td></tr>
     </table>
 
     <!-- LOGIN -->
@@ -223,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
