--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <canvas id="galaxy"></canvas>
 
-    <h1>TK SURE PREDICTIONS</h1>
+    <h1>TK Team Killers</h1>
 
     <!-- FREE PREDICTIONS ALWAYS VISIBLE -->
     <h2 class="section-title">Free Predictions</h2>
@@ -223,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
