--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <tr><td>STRAIGHT WIN</td><td>VILLERREAL VS OVIEDO</td><td>HOME WIN</td></tr>
         </table>
 
-        <h2 class="section-title">⚡ straight win ⚡</h2>
+        <h2 class="section-title">⚡ VIP straight win ⚡</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><th>STRAIGHT WIN</th><th>SHANHAI PORT VS HENAN SONGSHAN</th><th>HOME WIN</th></tr>
@@ -134,13 +134,13 @@
             <tr><td>Straight Win</td><td>VILLERREAL VS OVIEDO</td><td>HOME WIN</td></tr>
         </table>
 
-        <h2 class="section-title">💎 corners 💎</h2>
+        <h2 class="section-title">💎 VIP corners 💎</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><th>CORNER</th><th>STROMSGODSET VS BODO/GLIMT</th><th>OVER 8.5</th></tr>
         </table>
 
-        <h2 class="section-title">🏆 over 2.5 🏆</h2>
+        <h2 class="section-title">🏆 VIP over 2.5 🏆</h2>
         <table>
             <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
             <tr><td>Over 2.5</td><td>SHANHAI PORT VS HENAN SONGSHAN</td><td>Yes</td></tr>
@@ -148,7 +148,7 @@
             <tr><td>over 2.5 </td><td>LIVERPOOL VS BOURNEMOUTH</td><td>YES</td></tr>
         </table>
 
-        <h2 class="section-title">⚡ double chance ⚡</h2>
+        <h2 class="section-title">⚡ VIP double chance ⚡</h2>
         <table>
             <tr><th>Category</th><th>MATCH</th><th>Prediction</th></tr>
             <tr><td>DOUBLE CHANCE</td><td>NIGER VS SOUTH AFRICA</td><td>2X</td></tr>
@@ -223,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
