--- a/index.html
+++ b/index.html
@@ -1,225 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TK Sure Predictions</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: #fff;
-            text-align: center;
-            overflow-x: hidden;
-        }
-        canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
-        h1 {
-            color: #00cfff;
-            font-size: 2.5rem;
-            margin-top: 20px;
-            text-shadow: 0 0 10px #00cfff;
-        }
-        .login-box {
-            background: rgba(20, 20, 20, 0.9);
-            border: 2px solid #ff0;
-            border-radius: 10px;
-            display: inline-block;
-            padding: 20px;
-            margin-top: 20px;
-            box-shadow: 0 0 20px #ff0;
-        }
-        .login-box h2 {
-            color: #ff0;
-        }
-        .login-box input {
-            padding: 10px;
-            width: 200px;
-            border: none;
-            border-radius: 5px;
-            margin: 10px 0;
-        }
-        .login-box button {
-            padding: 10px 20px;
-            background-color: #ff0;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        table {
-            width: 90%;
-            margin: 20px auto;
-            border-collapse: collapse;
-            border-radius: 10px;
-            overflow: hidden;
-            background: rgba(0, 0, 0, 0.7);
-        }
-        th {
-            background-color: #00cfff;
-            padding: 12px;
-            color: #000;
-            font-size: 1rem;
-        }
-        td {
-            padding: 10px;
-            border-bottom: 1px solid #333;
-        }
-        tr:hover {
-            background-color: rgba(255, 255, 255, 0.05);
-        }
-        .section-title {
-            font-size: 1.5rem;
-            color: rgb(3, 3, 3);
-            margin-top: 40px;
-        }
-        .main-content {
-            display: none;
-            animation: fadeIn 1s ease-in-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TK SURE PREDICTIONS</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(to bottom right, #ffecd2, #fcb69f);
+        color: #333;
+    }
+    header {
+        background: linear-gradient(90deg, #ff4d00, #ff9900);
+        color: white;
+        padding: 15px;
+        text-align: center;
+        font-size: 1.8rem;
+        font-weight: bold;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    }
+    .date {
+        text-align: center;
+        font-weight: bold;
+        margin-top: 10px;
+        font-size: 1.1rem;
+    }
+    h2 {
+        text-align: center;
+        margin: 20px 0 10px;
+        color: #ff4d00;
+        font-size: 1.6rem;
+    }
+    table {
+        width: 90%;
+        margin: 0 auto;
+        border-collapse: collapse;
+        background-color: #fff4f0;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+        border-radius: 8px;
+        overflow: hidden;
+    }
+    table thead {
+        background-color: #ff4d00;
+        color: white;
+    }
+    table th, table td {
+        padding: 12px;
+        text-align: center;
+        border-bottom: 1px solid #f0e0da;
+    }
+    table td a {
+        color: #0073e6;
+        text-decoration: none;
+    }
+    .tip {
+        background-color: orange;
+        font-weight: bold;
+        color: white;
+        border-radius: 3px;
+        padding: 5px 10px;
+        display: inline-block;
+    }
+    /* Pricing Boxes */
+    .pricing-container {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        margin: 50px auto;
+        flex-wrap: wrap;
+    }
+    .pricing-box {
+        background: white;
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+        text-align: center;
+        width: 320px;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .pricing-box:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
+    .pricing-box h3 {
+        background: linear-gradient(90deg, #ff4d00, #ff9900);
+        color: white;
+        padding: 12px;
+        border-radius: 5px;
+        margin-top: 0;
+        font-size: 1.3rem;
+    }
+    .price {
+        font-size: 2.2rem;
+        font-weight: bold;
+        margin: 20px 0;
+        color: #ff4d00;
+    }
+    .pricing-box ul {
+        list-style: none;
+        padding: 0;
+        margin: 10px 0;
+        color: #555;
+        font-size: 1rem;
+    }
+    .pricing-box ul li {
+        margin: 8px 0;
+    }
+    .btn {
+        display: inline-block;
+        background: linear-gradient(90deg, #ff4d00, #ff9900);
+        color: white;
+        padding: 12px 20px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        margin-top: 15px;
+        transition: background 0.3s ease;
+    }
+    .btn:hover {
+        background: linear-gradient(90deg, #ff6600, #ffaa33);
+    }
+</style>
 </head>
 <body>
 
-    <canvas id="galaxy"></canvas>
+<header>TK SURE PREDICTIONS</header>
+<div class="date">FRIDAY 15th, August 2025</div>
+<h2>FREE Prediction</h2>
 
-    <h1>TK Team Killers</h1>
+<table>
+    <thead>
+        <tr>
+            <th>Time</th>
+            <th>League</th>
+            <th>Match</th>
+            <th>Tip</th>
+            <th>Odds</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>13:30</td>
+            <td><a href="#">china super league</a></td>
+            <td>shanghai vs henan songshan longmen</td>
+            <td><span class="tip">Over 2.5</span></td>
+            <td>1.50</td>
+        </tr>
+        <tr>
+            <td>19:00</td>
+            <td><a href="#">norway</a></td>
+            <td>stromsgodst vs bodo/glimt</td>
+            <td><span class="tip">Over 8.5 corner</span></td>
+            <td>1.45</td>
+        </tr>
+        <tr>
+            <td>21:00</td>
+            <td><a href="#">prememier leageu</a></td>
+            <td>liverpool vs bournemouth</td>
+            <td><span class="tip">Home win</span></td>
+            <td>1.30</td>
+        </tr>
+        <tr>
+            <td>20:00</td>
+            <td><a href="#">turkey</a></td>
+            <td>galatasaray vs karagumruk</td>
+            <td><span class="tip">Home win + Over 1.5</span></td>
+            <td>1.30</td>
+        </tr>
 
-    <!-- FREE PREDICTIONS ALWAYS VISIBLE -->
-    <h2 class="section-title">Free Predictions</h2>
-    <table>
-        <tr><th>Match</th><th>Prediction</th></tr>
-        <tr><td>SOUTH AFRICA vs NIGER</td><td>HOME WIN</td></tr>
-        <tr><td>RENNES vs MARSEILLE</td><td>AWAY Win</td></tr>
-        <tr><td>LEUVEN vs GENK</td><td>2X</td></tr>
-        <tr><td>STROMSGODSET VS BODO/GLIMT</td><td>OVER 8.5</td></tr>
-    </table>
+    </tbody>
+</table>
 
-    <!-- LOGIN -->
-    <div class="login-box" id="loginBox">
-        <h2>🔒 VIP Access</h2>
-        <input type="password" id="password" placeholder="Enter password">
-        <br>
-        <button onclick="checkPassword()">Login</button>
+<div class="pricing-container">
+    <div class="pricing-box">
+        <h3>Basic Plan</h3>
+        <div class="price">R200</div>
+        <ul>
+            <li>TOP Predictions</li>
+            <li>STRAIGHT WIN PREDICTIONS</li>
+            <li>OVER 2.5 PREDICTIONS</li>
+            <li>DOUBLE CHANCE PREDICTIONS</li>
+        </ul>
+        <a href="https://chat.whatsapp.com/GoUA4KAZMRuF22jlGpBTgl?mode=ems_copy_c" target="_blank" class="btn">Choose Plan</a>
     </div>
-
-    <!-- VIP CONTENT -->
-    <div class="main-content" id="mainContent">
-
-        <h2 class="section-title">🔥 VIP Predictions 🔥</h2>
-        <table>
-            <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>STRAIGHT WIN</td><td>SHANHAI PORT VS HENAN SONGSHAN</td><td>HOME WIN</td></tr>
-            <tr><td>Corner</td><td>STROMSGODSET VS BODO/GLIMT</td><td>Over 8.5</td></tr>
-            <tr><td>Straight Win</td><td>GALATASARAY VS KARAGUMRUK</td><td>Home Win</td></tr>
-            <tr><td>STRAIGHT WIN</td><td>LIVERPOOL VS BOURNEMOUTH</td><td>HOME Win</td></tr>
-            <tr><td>STRAIGHT WIN</td><td>VILLERREAL VS OVIEDO</td><td>HOME WIN</td></tr>
-        </table>
-
-        <h2 class="section-title">⚡ VIP straight win ⚡</h2>
-        <table>
-            <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><th>STRAIGHT WIN</th><th>SHANHAI PORT VS HENAN SONGSHAN</th><th>HOME WIN</th></tr>
-            <tr><td>STRAIGHT WIN</td><td>STROMSGODSET VS BODO/GLIMT</td><td>AWAY WIN</td></tr>
-            <tr><td>STRAIGHT WIN</td><td>GALATASARAY VS KARAGUMRUK</td><td>HOME WIN</td></tr>
-            <tr><td>Straight Win</td><td>LIVERPOOL VS BOURNEMOUTH</td><td>HOME Win</td></tr>
-            <tr><td>Straight Win</td><td>VILLERREAL VS OVIEDO</td><td>HOME WIN</td></tr>
-        </table>
-
-        <h2 class="section-title">💎 VIP corners 💎</h2>
-        <table>
-            <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><th>CORNER</th><th>STROMSGODSET VS BODO/GLIMT</th><th>OVER 8.5</th></tr>
-        </table>
-
-        <h2 class="section-title">🏆 VIP over 2.5 🏆</h2>
-        <table>
-            <tr><th>Category</th><th>Match</th><th>Prediction</th></tr>
-            <tr><td>Over 2.5</td><td>SHANHAI PORT VS HENAN SONGSHAN</td><td>Yes</td></tr>
-            <tr><td>over 2.5 </td><td>GALATASARAY VS KARAGUMRUK</td><td>YES</td></tr>
-            <tr><td>over 2.5 </td><td>LIVERPOOL VS BOURNEMOUTH</td><td>YES</td></tr>
-        </table>
-
-        <h2 class="section-title">⚡ VIP double chance ⚡</h2>
-        <table>
-            <tr><th>Category</th><th>MATCH</th><th>Prediction</th></tr>
-            <tr><td>DOUBLE CHANCE</td><td>NIGER VS SOUTH AFRICA</td><td>2X</td></tr>
-            <tr><td>DOUBLE CHANCE</td><td>RENNES VS MARSEILLE</td><td>2X</td></tr>
-        </table>
-        
+    <div class="pricing-box">
+        <h3>Premium Plan</h3>
+        <div class="price">R400</div>
+        <ul>
+            <li>3X TOP Predictions</li>
+            <li>OVER 2.5 PREDICTIONS</li>
+            <li>Straight WIN PREDICTIONS</li>
+            <li>CORNERS PREDICTIONS</li>
+            <li>DOUBLE CHANCE PREDICTIONS</li>
+        </ul>
+        <a href="https://chat.whatsapp.com/KDISzccWaReEsDoEVnmOt7?mode=ems_copy_c" target="_blank" class="btn">Choose Plan</a>
     </div>
-
-    <script>
-        // PASSWORD CHECK
-        function checkPassword() {
-            const correctPassword = "TKLOVMONEY";
-            const enteredPassword = document.getElementById("password").value;
-            if (enteredPassword === correctPassword) {
-                document.getElementById("loginBox").style.display = "none";
-                document.getElementById("mainContent").style.display = "block";
-            } else {
-                alert("Incorrect password! Access denied.");
-            }
-        }
-
-        // GALAXY BACKGROUND
-        const canvas = document.getElementById("galaxy");
-        const ctx = canvas.getContext("2d");
-        let stars = [];
-
-        function resizeCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        }
-        window.addEventListener("resize", resizeCanvas);
-        resizeCanvas();
-
-        function createStars() {
-            stars = [];
-            for (let i = 0; i < 200; i++) {
-                stars.push({
-                    x: Math.random() * canvas.width,
-                    y: Math.random() * canvas.height,
-                    radius: Math.random() * 1.5,
-                    speed: Math.random() * 0.5
-                });
-            }
-        }
-        function drawStars() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = "#fff";
-            stars.forEach(star => {
-                ctx.beginPath();
-                ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
-                ctx.fill();
-            });
-        }
-        function updateStars() {
-            stars.forEach(star => {
-                star.y += star.speed;
-                if (star.y > canvas.height) {
-                    star.y = 0;
-                    star.x = Math.random() * canvas.width;
-                }
-            });
-        }
-        function animate() {
-            drawStars();
-            updateStars();
-            requestAnimationFrame(animate);
-        }
-
-        createStars();
-        animate();
-    </script>
+</div>
 
 </body>
 </html>
