--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
 
 <header>TK SURE PREDICTIONS</header>
-<div class="date">FRIDAY 15th, August 2025</div>
+<div class="date">SATURDAY 16th, August 2025</div>
 <h2>FREE Prediction</h2>
 
 <table>
@@ -173,15 +173,18 @@
     </tbody>
 </table>
 
+<div class="date">START 22 AUGUST 2025;END 22 SEPTEMBER 2025</div>
+<h2>AUGUST MEMBERSHIP</h2>
+    
 <div class="pricing-container">
     <div class="pricing-box">
         <h3>Basic Plan</h3>
         <div class="price">R200</div>
         <ul>
+            <li>2 BETWAY/HOLLYWOOD CODES</li>
             <li>TOP Predictions</li>
             <li>STRAIGHT WIN PREDICTIONS</li>
             <li>OVER 2.5 PREDICTIONS</li>
-            <li>DOUBLE CHANCE PREDICTIONS</li>
         </ul>
         <a href="https://chat.whatsapp.com/GoUA4KAZMRuF22jlGpBTgl?mode=ems_copy_c" target="_blank" class="btn">Choose Plan</a>
     </div>
@@ -189,7 +192,8 @@
         <h3>Premium Plan</h3>
         <div class="price">R400</div>
         <ul>
-            <li>3X TOP Predictions</li>
+            <li>3+ BETWAY/HOLLYWOOD CODES</li>
+            <li>TOP Predictions</li>
             <li>OVER 2.5 PREDICTIONS</li>
             <li>Straight WIN PREDICTIONS</li>
             <li>CORNERS PREDICTIONS</li>
@@ -201,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
