--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <li>STRAIGHT WIN PREDICTIONS</li>
             <li>OVER 2.5 PREDICTIONS</li>
         </ul>
-        <a href="https://chat.whatsapp.com/GoUA4KAZMRuF22jlGpBTgl?mode=ems_copy_c" target="_blank" class="btn">Choose Plan</a>
+        <a href="https://whatsapp.com/channel/0029VbAqHpE4CrfmrN0nR00v" target="_blank" class="btn">Choose Plan</a>
     </div>
     <div class="pricing-box">
         <h3>Premium Plan</h3>
@@ -154,7 +154,7 @@
             <li>CORNERS PREDICTIONS</li>
             <li>DOUBLE CHANCE PREDICTIONS</li>
         </ul>
-        <a href="https://chat.whatsapp.com/KDISzccWaReEsDoEVnmOt7?mode=ems_copy_c" target="_blank" class="btn">Choose Plan</a>
+        <a href="https://whatsapp.com/channel/0029VbB2XqiEVccLbcaQvK2c" target="_blank" class="btn">Choose Plan</a>
     </div>
 </div>
 
@@ -206,6 +206,7 @@
 
     </tbody>
 </table>
+
 
 
 
