--- a/index.html
+++ b/index.html
@@ -197,15 +197,16 @@
             <td>1.30</td>
         </tr>
         <tr>
-            <td>21:30</td>
-            <td><a href="#">PORTUGAL LIGA</a></td>
-            <td>ESTRELA VS BENFICA</td>
-            <td><span class="tip">AWAY WIN</span></td>
+            <td>20:30</td>
+            <td><a href="#">SUPER CUP</a></td>
+            <td>STUTTGART VS BAYERN MUNICH</td>
+            <td><span class="tip">2X</span></td>
             <td>1.30</td>
         </tr>
 
     </tbody>
 </table>
+
 
 
 
