--- a/index.html
+++ b/index.html
@@ -133,28 +133,25 @@
     
 <div class="pricing-container">
     <div class="pricing-box">
-        <h3>Basic Plan</h3>
+        <h3>VIP Plan</h3>
         <div class="price">R200</div>
         <ul>
-            <li>2 BETWAY/HOLLYWOOD CODES</li>
-            <li>TOP Predictions</li>
-            <li>STRAIGHT WIN PREDICTIONS</li>
-            <li>OVER 2.5 PREDICTIONS</li>
+            <li>GET 6 CODES PER WEEK</li>
+            <li>GET 6 PREDICTION TABLES</li>
+            <li>ACCESS TO PRIVATE WEBSITE</li>
+            <li>Betway and Hollywood code </li>
         </ul>
         <a href="https://whatsapp.com/channel/0029VbAqHpE4CrfmrN0nR00v" target="_blank" class="btn">Choose Plan</a>
     </div>
     <div class="pricing-box">
-        <h3>Premium Plan</h3>
-        <div class="price">R400</div>
+        <h3>FREE</h3>
+        <div class="price"></div>
         <ul>
-            <li>3+ BETWAY/HOLLYWOOD CODES</li>
-            <li>TOP Predictions</li>
-            <li>OVER 2.5 PREDICTIONS</li>
-            <li>Straight WIN PREDICTIONS</li>
-            <li>CORNERS PREDICTIONS</li>
-            <li>DOUBLE CHANCE PREDICTIONS</li>
+            <li>Access Free Predictions</li>
+            <li>betway and hollywood code</li>
+            <li>Community group Access</li>
         </ul>
-        <a href="https://whatsapp.com/channel/0029VbB2XqiEVccLbcaQvK2c" target="_blank" class="btn">Choose Plan</a>
+        <a href="https://whatsapp.com/channel/0029VbAxSHiBPzjfaAoeAi3Q" target="_blank" class="btn">Choose Plan</a>
     </div>
 </div>
 
@@ -206,6 +203,7 @@
 
     </tbody>
 </table>
+
 
 
 
