--- a/index.html
+++ b/index.html
@@ -128,30 +128,30 @@
 
 <header>TK SURE PREDICTIONS</header>
 
-<div class="date">START 22 AUGUST 2025;END 22 SEPTEMBER 2025</div>
-<h2>AUGUST MEMBERSHIP</h2>
+<div class="date">START 22 AUGUST 2025</div>
+<h2>JOIN US</h2>
     
 <div class="pricing-container">
     <div class="pricing-box">
         <h3>VIP Plan</h3>
-        <div class="price">R200</div>
+        <div class="price">R250</div>
         <ul>
             <li>GET 6 CODES PER WEEK</li>
             <li>GET 6 PREDICTION TABLES</li>
             <li>ACCESS TO PRIVATE WEBSITE</li>
             <li>Betway and Hollywood code </li>
         </ul>
-        <a href="https://whatsapp.com/channel/0029VbAqHpE4CrfmrN0nR00v" target="_blank" class="btn">Choose Plan</a>
+        <a href="https://whatsapp.com/channel/0029VbAqHpE4CrfmrN0nR00v" target="_blank" class="btn">JOIN</a>
     </div>
     <div class="pricing-box">
         <h3>FREE</h3>
-        <div class="price"></div>
+        <div class="price">R0</div>
         <ul>
             <li>Access Free Predictions</li>
             <li>betway and hollywood code</li>
             <li>Community group Access</li>
         </ul>
-        <a href="https://whatsapp.com/channel/0029VbAxSHiBPzjfaAoeAi3Q" target="_blank" class="btn">Choose Plan</a>
+        <a href="https://whatsapp.com/channel/0029VbAxSHiBPzjfaAoeAi3Q" target="_blank" class="btn">JOIN</a>
     </div>
 </div>
 
@@ -203,6 +203,7 @@
 
     </tbody>
 </table>
+
 
 
 
