--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </body>
 </html>
 
-<div class="date">SATURDAY 16th, August 2025</div>
+<div class="date">TUESDAY 19th, August 2025</div>
 <h2>FREE Prediction</h2>
 
 <table>
@@ -173,36 +173,37 @@
     </thead>
     <tbody>
         <tr>
-            <td>18:30</td>
-            <td><a href="#">PREMIER LEAGUE</a></td>
-            <td>WOLVES VS MAN CITY</td>
-            <td><span class="tip">AWAY WIN</span></td>
-            <td>1.40</td>
+            <td>21;00</td>
+            <td><a href="#">champions league</a></td>
+            <td>CRVENA VS PAFOS</td>
+            <td><span class="tip">OVER 8,5 CORNERS</span></td>
+            <td>1.51</td>
         </tr>
         <tr>
-            <td>19:30</td>
-            <td><a href="#">LALIGA</a></td>
-            <td>MALLORCA VS BARCELONA</td>
-            <td><span class="tip">AWAY WIN</span></td>
-            <td>1.35</td>
+            <td>21;00</td>
+            <td><a href="#">CHAMPIONS LEAGUE</a></td>
+            <td>FERENCVAROS VS QARABAG</td>
+            <td><span class="tip">OVER 8.5 CORNER</span></td>
+            <td>1.55</td>
         </tr>
         <tr>
-            <td>20:30</td>
-            <td><a href="#">TURKET SUPER LIG</a></td>
-            <td>GOZTEPE VS FENERBAHCE</td>
-            <td><span class="tip">2X</span></td>
-            <td>1.30</td>
+            <td>21;00</td>
+            <td><a href="#">CHAMPIONS LEAGUE</a></td>
+            <td>RANGERS VS CLUB BRUGGE</td>
+            <td><span class="tip">OVER 8.5 CORNER</span></td>
+            <td>1.50</td>
         </tr>
         <tr>
-            <td>20:30</td>
-            <td><a href="#">SUPER CUP</a></td>
-            <td>STUTTGART VS BAYERN MUNICH</td>
-            <td><span class="tip">2X</span></td>
+            <td>21;0</td>
+            <td><a href="#">LA LIGA</a></td>
+            <td>REAL MADRID VS OSASUNA</td>
+            <td><span class="tip">OVER 8.5</span></td>
             <td>1.30</td>
         </tr>
 
     </tbody>
 </table>
+
 
 
 
