--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </body>
 </html>
 
-<div class="date">TUESDAY 19th, August 2025</div>
+<div class="date">FRIDAY 22th, August 2025</div>
 <h2>FREE Prediction</h2>
 
 <table>
@@ -173,36 +173,37 @@
     </thead>
     <tbody>
         <tr>
-            <td>21;00</td>
-            <td><a href="#">champions league</a></td>
-            <td>CRVENA VS PAFOS</td>
-            <td><span class="tip">OVER 8,5 CORNERS</span></td>
-            <td>1.51</td>
+            <td>18;30</td>
+            <td><a href="#">PREMIUM LIIGA</a></td>
+            <td>LEVADIA VS PARNU JK VAPRUS</td>
+            <td><span class="tip">OVER 1,5 LEVADIA</span></td>
+            <td>1.30</td>
         </tr>
         <tr>
             <td>21;00</td>
-            <td><a href="#">CHAMPIONS LEAGUE</a></td>
-            <td>FERENCVAROS VS QARABAG</td>
-            <td><span class="tip">OVER 8.5 CORNER</span></td>
-            <td>1.55</td>
+            <td><a href="#">BUNDESIGA</a></td>
+            <td>BAYERN MUNICH VS RB LEIPZIG</td>
+            <td><span class="tip">1X</span></td>
+            <td>1.20</td>
         </tr>
         <tr>
             <td>21;00</td>
-            <td><a href="#">CHAMPIONS LEAGUE</a></td>
-            <td>RANGERS VS CLUB BRUGGE</td>
-            <td><span class="tip">OVER 8.5 CORNER</span></td>
-            <td>1.50</td>
+            <td><a href="#">SUPER LIG</a></td>
+            <td>FATIH KARAGUMRUK VS GOZTEPE</td>
+            <td><span class="tip">2X</span></td>
+            <td>1.30</td>
         </tr>
         <tr>
             <td>21;0</td>
-            <td><a href="#">LA LIGA</a></td>
-            <td>REAL MADRID VS OSASUNA</td>
-            <td><span class="tip">OVER 8.5</span></td>
-            <td>1.30</td>
+            <td><a href="#">PREMIER LEAGUE</a></td>
+            <td>WEST HAM UNITED VS CHELSEA</td>
+            <td><span class="tip">OVER 9.5 CORNERS</span></td>
+            <td>1.70</td>
         </tr>
 
     </tbody>
 </table>
+
 
 
 
